<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wxLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowWeatherActivity">

    <LinearLayout
        android:id="@+id/wx"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>

        <TextView android:id="@+id/dateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>

        <TextView android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>

        <TextView android:id="@+id/weatherCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>

        <TextView android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>

        <TextView android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"/>

        <Button
            android:id="@+id/wxAiButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:insetLeft="6dp"
            android:insetTop="6dp"
            android:insetRight="6dp"
            android:insetBottom="6dp"
            android:text="@string/weather_ai_insight_button_text" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>